@@ -1,6 +1,9 @@
 # Generated by roxygen2: do not edit by hand
 
+export("%allin%")
+export("%has_names%")
 export(add_class)
+export(all_in)
 export(apply_minmax_scale)
 export(apply_quantile_scale)
 export(apply_uniform_scale)
@@ -11,8 +14,11 @@ export(euclidean_distance)
 export(expand_matrix)
 export(extend_with)
 export(extract_row_to_list)
+export(has_names)
 export(inherit_default_params)
 export(install_packages)
+export(is_bounded)
+export(is_single_numeric)
 export(list_as_tibble)
 export(manhattan_distance)
 export(mapdf)
@@ -37,6 +43,8 @@ import(methods)
 import(stringr)
 import(tibble)
 import(tidyr)
+importFrom(assertthat,"%has_name%")
+importFrom(assertthat,"on_failure<-")
 importFrom(desc,desc_get_remotes)
 importFrom(devtools,install_cran)
 importFrom(devtools,install_github)
