@@ -14,6 +14,9 @@
 
  * FUNCTIONALITY: Add `safe_tempdir()` function. This function creates a
    unique temporary directory and creates it if necessary.
+   
+ * FUNCTIONALITY: Add helper assertion functions 
+   `%all_in`, `%has_names%`, `is_bounded()` and `is_single_numeric`.
  
 # dynutils 1.0.0 (2018-07-18)
  
